--- a/Sample_Report/sample_report.ipynb
+++ b/Sample_Report/sample_report.ipynb
@@ -8,7 +8,7 @@
     "# Homework #1\n",
     "\n",
     "**Name:** John Doe  \n",
-    "**Course:** MEC 529 \n",
+    "**Course:** MEC 5XX \n",
     "\n",
     "---\n",
     "\n",
